@@ -1,5 +1,23 @@
 # jeb-plugins
 
-- JumpTo, jump to the select class from AndroidManifest .
-- Decode, auto decode some encrypted strings.
-- Rename, rename the classes name which had been confound.
+## JumpTo[Ctrl+Shift+J]
+
+From manifest view jump to the corresponding code.
+
+## Decode[Ctrl+Shift+D]
+
+auto decode the encrypted strings.
+
+1. Add `-Djava.ext.dirs=./lib` to the start scrit, so jeb could load the jars.
+```
+%JAVA% -Xmx2048m -XX:-UseParallelGC -XX:MinHeapFreeRatio=15 -Dfile.encoding=UTF-8 -Djava.ext.dirs=./lib -jar %DECOMPILER% %*
+```
+2. Decompile the dex file to jar file, then copy it to `./lib`.
+
+3. Open the apk.
+
+4. Ctrl+Shift+D.
+
+## Rename[Ctrl+Shift+R]
+
+renames classes/fields/methods from non-latin names to easier to read names
